responsiveness alignment issues

--- a/landing/src/LandingContactFooterComponents/Contact.css
+++ b/landing/src/LandingContactFooterComponents/Contact.css
@@ -27,27 +27,36 @@ body {
     align-items: center;
     border: none;
     background-color: rgba(236, 238, 250, 1);
-    width: fit-content;
-    gap: .2rem;
-    border-radius: 20px;
-    padding: .2rem .8rem;
     cursor: pointer;
+    width: 225px;
+    height: 56px;
+    border-radius: 24px;
+    padding: 8px 16px 8px 16px;
+    gap: 16px;
 }
 
-.contact-get-started p{
+.contact-get-started p {
+    width: 137px;
+    height: 30px;
     font-size: 24px;
+    font-weight: 400;
+    color: rgba(68, 81, 202, 1);
 }
 
-.logo-icon{
+.logo-icon {
     width: 40px;
 }
 
-.contact-h1{
+.contact-h1 {
     font-size: 64px;
 }
 
-.form-message-text{
+.form-message-text {
     font-size: 24px;
+    color: rgba(84, 84, 84, 1);
+    font-weight: 400;
+    width: 706px;
+    height: 60px;
 }
 
 
@@ -127,24 +136,67 @@ body {
 /* MEDIA QUERY!!! */
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-    .contact-caller {
+
+    .contact-image-container {
         display: none;
     }
 
     .landing-contact {
-        margin: 1rem;
-        padding: 0;
+        flex-direction: column;
+        width: 770px;
+        height: 940px;
+        border-radius: 16px;
+        padding: 40px 32px 40px 32px;
+        /* border: 2px solid brown; */
+        border: 1px solid rgba(176, 176, 176, 1);
     }
 
     .contact-left {
-        border: 1px solid rgba(176, 176, 176, 1);
-        width: 100%;
-        padding: 1rem;
+        
+        width: 706px;
+        height: 908px;
+        gap: 40px;
+        /* padding: 16px; */
+    }
+
+    .contact-form {
+        width: 706px;
+        height: 616px;
+        gap: 23px;
+        /* padding-bottom: 64px; */
+    }
+
+    .form-label {
+        width: 706px;
+        /* height: 102px; */
+        gap: 8px;
+    }
+
+    .form-label input {
+        width: 706px;
+        height: 64px;
+        border-radius: 8px;
+    }
+
+    .form-label textarea {
+        width: 706px;
+        /* this height affects the heights of it's parent container. i had to make it 230px compared to the .contact-left div. */
+        height: 230px;
+        border-radius: 8px;
     }
 
     .logo-icon {
         width: 20%;
     }
+
+    .contact-h1 {
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 63.79px;
+        width: 240px;
+        height: 64px;
+    }
+
 
     .contact-get-started p {
         font-size: .9rem;
